--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                                 <tr>
                                     <th></th>
                                     <th style="text-align:center;">   Ground Truth</th>
-                                    <th style="text-align:center;">   Tacotron2</th>
+                                    <th style="text-align:center;">   Tacotron2 (r=1)</th>
                                     <th style="text-align:center;">   Transformer TTS</th>
                                     <th style="text-align:center;">   FastSpeech</th>
-                                    <th style="text-align:center;">   FastTalker</th>
+                                    <th style="text-align:center;">   FastTalker (K=1)</th>
                           
                                 </tr>
                                  
